fix: invisible "game on" heading during theme toggle

--- a/src/Homepage/Homepage/Homepage.css
+++ b/src/Homepage/Homepage/Homepage.css
@@ -705,3 +705,8 @@ input.search-input:hover {
   color: #96969c !important;
 }
 
+.header_homepage h1 {
+  font-size: 3.5rem;
+  width: 100%;
+  color: white;
+}
